2008-05-10  Hans Breuer  <hans@breuer.org>

	* lib/text.c(text_calc_boundingbox) : the bounding box did include one
	descent too much, which caused wrong placement for "Standard - Text"
	which calculates the vertical text positioning from the bounding box.
	Fixes bug #528642 but not bug #438020.

	* lib/grid.c(grid_draw_*_lines) : the major lines were sometimes off
	by one due to rounding problems. Fixes bug #382212.

	* objects/standard/outline.c : forgot to call update_data after copy

	* objects/Misc/measure.c objects/Misc/pixmaps/measure.xpm
	  objects/Misc/libmisc.c objects/Misc/Makefile.am objects/makefile.msc
	  sheets/Misc.sheet.in : a new object to measure and show the distance
	between two connection points.

	* plug-ins/python/select_empty.py : allows to find objects with empty
	bounding boxes like empty text. See bug #99375.
	* plug-ins/python/Makefile.am : install it
	* app/display.c(selection_changed) : update menu sensitivity in the
	signal handler for selection changed. Could replace a lot of explicit
	updates, but is needed when the selection is changed from a plug-in
	* app/diagram.c(diagram_update_menu_sensitivity) : maybe called with 
	ddisplay_active() returning NULL, don't crash on that.

2008-05-06  Steffen Macke <sdteffen@sdteffen.de>

	* installer/win32/dia.nsi:
	* installer/win32/locale/slovenian.nsh: Slovenian translations for the
	installer. Patch from Martin Srebotnjak <filmsi@users.sourceforge.net>

2008-05-04  Hans Breuer  <hans@breuer.org>

	* plug-ins/xfig/xfig-import.c(fig_read_arc): acccept pie-wedge 
	although not completely supported. Better than refusing the whole file
	(fig_read_text) : fixed probable typo 3.54/72.0

	* lib/geometry.[hc] lib/libdia.def: three_point_circle() calculate
	center point and radius given 3 points on a circle, fixed prototype and 
	implementation to ...
	* plug-ins/xfig/xfig-export.c : corrected arc export for both draw_arc 
	and fill_arc methods
