@@ -1,5 +1,13 @@
 2008-05-10  Hans Breuer  <hans@breuer.org>
 
+	* lib/diagramdata.c(layer_update_extents) : don't consider empty 
+	objects for the overall extents. Fixes bug #531687 and lowers
+	priority of bug #99375.
+	
+	* plug-ins/wmf/wmf.cpp : don't assume pango_context_load_font() can not
+	fail. It does for font descriptions pointing to fonts not available
+	on the particular system.
+
 	* lib/text.c(text_calc_boundingbox) : the bounding box did include one
 	descent too much, which caused wrong placement for "Standard - Text"
 	which calculates the vertical text positioning from the bounding box.
